Automatic contacts: Do not modify contacts with the same full name
Steps to reproduce:
- Have evolution as default e-mail application
- Receive many e-mails
- Have a look at the address book of collected contacts
What happens: If the local-part of the addresses is identical, they are being merged together into a single contact.
What should happen: Do not merge at least some of the addresses.
Example: In my case, I have many addresses with the local-part being "info" (e.g. info@example.com). These clearly don't match together. Same for "webmaster", "contact", and different other versions of the same problem.
Example 2: This issue also affects addresses that are already to a contact with a "real" name. I.e. we have contact name "john doe" with address "info@example.com", when I receive a new e-mail from this address, the address will still be added into the contact "info" in the address book of collected contacts.
Additional info: evolution-3.34.3-1.fc31.x86_64 evolution-data-server-3.34.3-2.fc31.x86_64