I#790 - Automatic contacts: Do not modify contacts with the same full name

Closes https://gitlab.gnome.org/GNOME/evolution/issues/790